--- a/src/App.css
+++ b/src/App.css
@@ -153,6 +153,25 @@ img {
     background-color: white;
 }
 
+.checkbox {
+    background-color: red;
+    color: black;
+    border: 2px solid black;
+    width: 30px;
+    height: 30px;
+    margin-bottom: 10px;
+    margin-top: 25px;
+}
+
+.align {
+    display: flex;
+    justify-content: center;
+}
+
+.checkbox:hover {
+    background-color: white;
+}
+
 .bounding-box-lesson:hover {
     background-color: var(--background-color2);
 }
@@ -185,7 +204,7 @@ img {
     justify-content: center;
     align-items: center;
     text-align: center;
-    background-color: rgba(0,0,0,0.8);
+    background-color: rgba(0,0,0,0.6);
     transition: background-color 0.1s;
     z-index: 2;
 }
