--- a/src/App.css
+++ b/src/App.css
@@ -120,6 +120,11 @@ img {
     transform: translate(-50%, 0%);
 }
 
+.check-mark {
+    position: absolute;
+    transform: translate(-50%, 0%);
+}
+
 .bounding-box-page {
     border: 2px solid black;
     margin: 3px;
