--- a/src/App.css
+++ b/src/App.css
@@ -154,19 +154,19 @@ img {
     background-color: var(--background-color);
     border-radius: 1vw;
     position: fixed;
-    width: 40vw;
+    width: 70vw;
     height: 105vh;
     left: 50vw;
     top: 2vh;
     transform: translate(-50%, 0%);
     text-align: center;
-    /* transition: top 0.1s;
-    transition-timing-function: ease-out; */
+    transition: top 0.1s;
+    transition-timing-function: ease-out;
 }
 
 .page-close {
     position: fixed;
-    left: 38vw;
+    left: 68vw;
     top: 4vh;
     font-size: 70;
     background-color: red;
@@ -233,6 +233,7 @@ img {
     align-items: center;
     text-align: center;
     background-color: rgba(0,0,0,0.6);
+    transition: background-color 0.1s;
     z-index: 2;
 }
 
@@ -249,6 +250,7 @@ img {
     align-items: center;
     text-align: center;
     background-color: rgba(0,0,0,0);
+    transition: background-color 0.1s;
     z-index: 2;
     pointer-events: none
 }
